# Fun-Gaussian-Splats

./: .gitignore  README.md  pyproject.toml
apps/: render.py  train.py
configs/: original.yaml  vq.yaml
docs/: ARCHITECTURE.md  CAMERA_PROJECTION_GUIDE.md  TESTING_SUMMARY.md  TRAINING_SETUP.md
gsplat/: registry.py
gsplat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
gsplat/datasets/: __init__.py  colmap_dataset.py  nerf_dataset.py
gsplat/methods/: __init__.py  base.py
gsplat/methods/original/: __init__.py  original.py
gsplat/methods/vq/: __init__.py  vq.py
gsplat/optim/: __init__.py
gsplat/render/: __init__.py  renderer.py
gsplat/sandbox/: README.md  colmap.py  train_fern.ipynb
gsplat/utils/: __init__.py  dataclasses.py  logging.py  seed.py
scripts/: download_demo_data.sh
tests/: test_original_method.py  test_registry.py
