[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsplat"
version = "0.0.1"
description = "Gaussian Splatting implementations: original and vector-quantized variants"
readme = "README.md"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0.0",
  "numpy>=1.24",  # Still needed for COLMAP reading
  "pyyaml>=6.0.1",
  "tqdm>=4.66",
  "pillow>=10.0.0", # For PIL
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "mypy>=1.6.0",
  "ipywidgets", # For notebook interactivity
  "matplotlib", # For plotting in notebooks
  "ipykernel",  # For running notebooks
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gsplat*"]

[tool.ruff]
line-length = 100
target-version = "py310"
